Changes to make CSUG Tutoring fit my CSUG page's theme better, while keeping bootstrap-responsive in tact. Added old CS department logo, as per the rest of my pages, and reduced header footprint, especially for mobile.

--- a/assets/css/bootstrap-responsive.css
+++ b/assets/css/bootstrap-responsive.css
@@ -61,7 +61,7 @@
   display: inherit !important;
 }
 
-@media (min-width: 768px) and (max-width: 979px) {
+@media (min-width: 768px) { /*and (max-width: 979px)*/
   .hidden-desktop {
     display: inherit !important;
   }
@@ -91,7 +91,7 @@
   }
 }
 
-@media (min-width: 1200px) {
+/*@media (min-width: 1200px) {
   .row {
     margin-left: -30px;
     *zoom: 1;
@@ -436,9 +436,9 @@
   .row-fluid .thumbnails {
     margin-left: 0;
   }
-}
+}*/
 
-@media (min-width: 768px) and (max-width: 979px) {
+@media (min-width: 768px) { /*and (max-width: 979px)*/
   .row {
     margin-left: -20px;
     *zoom: 1;
@@ -909,7 +909,7 @@
   }
 }
 
-@media (max-width: 979px) {
+/*@media (max-width: 979px) {
   body {
     padding-top: 0;
   }
@@ -1055,4 +1055,4 @@
     height: auto !important;
     overflow: visible !important;
   }
-}
+}*/
